--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -1,20 +1,71 @@
-<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarController">
-  <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="nav.isCollapsed = !nav.isCollapsed">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="/" class="navbar-brand">node-gameflame</a>
-    </div>
-    <div collapse="nav.isCollapsed" class="navbar-collapse collapse" id="navbar-main">
-      <ul class="nav navbar-nav">
-        <li ng-repeat="item in nav.menu" ui-sref-active="active">
-            <a ui-sref="{{item.state}}">{{item.title}}</a>
-        </li>
-      </ul>
+<div class="navbar">
+  <div class="off-canvas-wrapper">
+    <div class="off-canvas-wrapper-inner">
+      <div class="title-bar">
+        <div class="title-bar-left">
+          <a class="left-off-canvas-toggle menu-icon" ><span></span></a>
+          <span class="title-bar-title">Gameflame <small>by Brushtale</small></span>
+        </div>
+
+        <div class="title-bar-right">
+          <a class="right-off-canvas-toggle menu-icon" ><span></span></a>
+        </div>
+      </div>
+      <div class="off-canvas position-left">
+        <ul class="mobile-ofc vertical menu">
+          <li>
+            <a href="#">Link 1</a>
+            <ul class="submenu menu vertical">
+              <li><a href="#">Sublink 1</a></li>
+              <li><a href="#">Sublink 2</a></li>
+              <li><a href="#">Sublink 3</a></li>
+              <li><a href="#">Sublink 4</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">Link 2</a>
+            <ul class="submenu menu vertical">
+              <li><a href="#">Sublink 5</a></li>
+              <li><a href="#">Sublink 6</a></li>
+              <li><a href="#">Sublink 7</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#" class="button">Button 1</a></li>
+        </ul>
+      </div>
+      <div class="off-canvas position-right">
+        <ul class="mobile-ofc vertical menu">
+          <li>
+            <a href="#">Link 1</a>
+            <ul class="submenu menu vertical">
+              <li><a href="#">Sublink 1</a></li>
+              <li><a href="#">Sublink 2</a></li>
+              <li><a href="#">Sublink 3</a></li>
+              <li><a href="#">Sublink 4</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="#">Link 2</a>
+            <ul class="submenu menu vertical">
+              <li><a href="#">Sublink 5</a></li>
+              <li><a href="#">Sublink 6</a></li>
+              <li><a href="#">Sublink 7</a></li>
+            </ul>
+          </li>
+
+          <li><a href="#" class="button">Button 1</a></li>
+        </ul>
+      </div>
+      <div class="off-canvas-content">
+        <div class="small-12 columns" ng-transclude>
+          <!-- <h1>How to use</h1>
+          <p>Just use the standard layout for an offcanvas page as documented in the <a href="http://foundation.zurb.com/docs/components/offcanvas.html">foundation docs</a></p>
+          <p>As long as you include mm.foundation.offcanvas it should simply work</p> -->
+        </div>
+      </div>
     </div>
   </div>
 </div>
